@@ -59,6 +59,10 @@ statement.
 
 *** Isar ***
 
+* Command 'define' introduces a local (non-polymorphic) definition, with
+optional abstraction over local parameters. The syntax resembles
+'obtain' and fits better into the Isar language than old 'def'.
+
 * Command '\<proof>' is an alias for 'sorry', with different
 typesetting. E.g. to produce proof holes in examples and documentation.
 
